# hypertrophy-rag

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  code-review.yml
api/: main.py  requirements.txt
scripts/: evaluate.py  update_index.py
src/hypertrophy_rag/: __init__.py  config.py  logging.py  main.py  models.py  utils.py
src/hypertrophy_rag/agent/: __init__.py  agent.py  tools.py
src/hypertrophy_rag/index/: vectordb.py
src/hypertrophy_rag/ingestion/: chunker.py  parser.py  pubmed.py  semantic_scholar.py
src/hypertrophy_rag/retrieval/: base.py  context.py  guardrails.py  hybrid.py  langchain_rag.py  prompts.py  providers.py  rag.py
tests/: test_chunker.py  test_guardrails.py  test_protocols.py  test_providers.py  test_pubmed.py  test_retrieval.py  test_vectordb.py
web/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
web/src/app/query/: layout.tsx  page.tsx
web/src/app/stats/: layout.tsx  page.tsx
web/src/components/: providers.tsx
web/src/components/landing/: features.tsx  hero.tsx  how-it-works.tsx  stats-bar.tsx
web/src/components/layout/: background-effects.tsx  footer.tsx  navbar.tsx
web/src/components/query/: answer-panel.tsx  filters.tsx  search-bar.tsx  study-card.tsx
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  gradient-text.tsx  input.tsx
web/src/lib/: api.ts  query-context.tsx
